kubernetes/deployment.yaml

# app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-2048-application
  namespace: botkube
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-2048-game
  template:
    metadata:
      labels:
        app: my-2048-game
    spec:
      containers:
        - name: my-2048-game
          image: "metehan1171/devops-case"
          ports:
            - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: my-clusterip-service
  namespace: botkube
spec:
  selector:
    app: my-2048-game
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
